--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "react": "^0.14.6",
     "react-dom": "^0.14.6",
     "react-modal": "^0.6.1",
+    "react-redux": "^4.4.0",
     "react-router": "^2.0.0-rc5",
     "react-router-redux": "^3.0.0",
+    "redux": "^3.3.1",
+    "redux-thunk": "^1.0.3",
     "skeleton.css": "^2.0.4"
   },
   "devDependencies": {
