--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A library app.",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server"
+    "start": "webpack-dev-server -d"
   },
   "author": "",
   "license": "ISC",
