--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "A library app.",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server -d"
+    "start": "webpack-dev-server -d",
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "react": "^0.14.6",
+    "react": "^0.14.7",
     "react-dom": "^0.14.6",
     "react-modal": "^0.6.1",
     "react-redux": "^4.4.0",
@@ -21,12 +22,25 @@
   },
   "devDependencies": {
     "babel-core": "^6.0.12",
+    "babel-jest": "*",
     "babel-loader": "^6.0.1",
     "babel-preset-es2015": "^6.0.12",
     "babel-preset-react": "^6.0.15",
     "eslint": "^1.10.3",
     "eslint-config-airbnb": "^4.0.0",
+    "eslint-plugin-jasmine": "^1.6.0",
     "eslint-plugin-react": "^3.16.1",
+    "jest-cli": "*",
+    "react-addons-test-utils": "~0.14.0",
     "webpack": "^1.12.1"
+  },
+  "jest": {
+    "scriptPreprocessor": "<rootDir>/node_modules/babel-jest",
+    "unmockedModulePathPatterns": [
+      "<rootDir>/node_modules/react",
+      "<rootDir>/node_modules/react-dom",
+      "<rootDir>/node_modules/react-addons-test-utils",
+      "<rootDir>/node_modules/fbjs"
+    ]
   }
 }
