--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-router-redux": "^3.0.0",
     "redux": "^3.3.1",
     "redux-thunk": "^1.0.3",
-    "skeleton.css": "^2.0.4"
+    "skeleton.css": "^2.0.4",
+    "whatwg-fetch": "^0.11.0"
   },
   "devDependencies": {
     "babel-core": "^6.0.12",
