--- a/package.json
+++ b/package.json
@@ -13,6 +13,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "babel": "^6.5.2",
+    "babel-core": "^6.0.12",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.0.12",
+    "babel-preset-react": "^6.0.15",
     "copy-webpack-plugin": "^1.1.1",
     "express": "^4.13.4",
     "extract-text-webpack-plugin": "^1.0.1",
@@ -30,11 +35,7 @@
     "whatwg-fetch": "^0.11.0"
   },
   "devDependencies": {
-    "babel-core": "^6.0.12",
     "babel-jest": "*",
-    "babel-loader": "^6.0.1",
-    "babel-preset-es2015": "^6.0.12",
-    "babel-preset-react": "^6.0.15",
     "eslint": "^1.10.3",
     "eslint-config-airbnb": "^4.0.0",
     "eslint-plugin-jasmine": "^1.6.0",
