--- a/.gitignore
+++ b/.gitignore
@@ -26,9 +26,6 @@ build/Release
 # Dependency directory
 node_modules
 
-# Public folder
-public
-
 # Optional npm cache directory
 .npm
 
@@ -39,5 +36,8 @@ public
 .vagrant
 Vagrantfile
 
-# Config
-config.js
+# OSX
+.DS_Store
+
+# production
+public
