--- a/package.json
+++ b/package.json
@@ -18,30 +18,29 @@
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.0.12",
     "babel-preset-react": "^6.0.15",
-    "copy-webpack-plugin": "^1.1.1",
+    "copy-webpack-plugin": "^4.0.1",
     "express": "^4.13.4",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "react": "^0.14.7",
-    "react-dom": "^0.14.6",
-    "react-modal": "^0.6.1",
-    "react-redux": "^4.4.0",
-    "react-router": "^2.0.0-rc5",
-    "react-router-redux": "^3.0.0",
+    "extract-text-webpack-plugin": "^2.1.0",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
+    "react-modal": "^1.7.3",
+    "react-redux": "^5.0.3",
+    "react-router": "^3.0.2",
     "redux": "^3.3.1",
-    "redux-thunk": "^1.0.3",
+    "redux-thunk": "^2.2.0",
     "skeleton.css": "^2.0.4",
-    "webpack": "^1.12.1",
-    "webpack-dev-server": "^1.14.1",
-    "whatwg-fetch": "^0.11.0"
+    "webpack": "^2.2.1",
+    "webpack-dev-server": "^2.4.2",
+    "whatwg-fetch": "^2.0.3"
   },
   "devDependencies": {
     "babel-jest": "*",
-    "eslint": "^2.4.0",
-    "eslint-config-airbnb": "^4.0.0",
-    "eslint-plugin-jasmine": "^1.6.0",
-    "eslint-plugin-react": "^3.16.1",
+    "eslint": "^3.17.1",
+    "eslint-config-airbnb": "^14.1.0",
+    "eslint-plugin-jasmine": "^2.2.0",
+    "eslint-plugin-react": "^6.10.0",
     "jest-cli": "*",
-    "react-addons-test-utils": "~0.14.0"
+    "react-addons-test-utils": "~15.4.2"
   },
   "jest": {
     "scriptPreprocessor": "<rootDir>/node_modules/babel-jest",
