Modify the webpack config to conform to changes in version 2 configuration. Change loader query to options. Change the way we pass CLI parameters, use env variable to define production/development environment

--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "A library app.",
   "main": "server.js",
   "scripts": {
-    "dev": "./node_modules/webpack-dev-server/bin/webpack-dev-server.js -d",
-    "prod": "./node_modules/webpack/bin/webpack.js -p",
+    "dev": "./node_modules/webpack-dev-server/bin/webpack-dev-server.js --env.development",
+    "prod": "./node_modules/webpack/bin/webpack.js --env.production",
     "postinstall": "npm run prod",
     "start": "node server.js",
     "test": "jest"
